apps/proxmox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: proxmox
spec:
  type: ExternalName
  externalName: 192.168.0.2.nip.io
  ports:
  - name: https
    protocol: TCP
    port: 8006
    targetPort: 8006
